Corrected timer for prev exercices. Added screenshots.

--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -15,7 +15,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="1dp"
         app:cardCornerRadius="4dp"
-        app:cardElevation="4dp"
+        android:backgroundTint="#FFFFFF"
+        android:elevation="0dp"
+        android:orientation="vertical"
+        app:cardElevation="0dp"
         app:cardUseCompatPadding="true">
 
         <RelativeLayout
